[package]
name = "objectbox-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
#lean-buffer-internal = { git = "https://github.com/Buggaboo/lean_buffer", branch = "main" }
lean-buffer-internal = { path = "../../lean_buffer/internal" }
objectbox-generator = { path = "../generator" }
rand = "0.8"
maplit = "1.0"
codegen = "0.2.0"
proc-macro2 = { version = "1.0", default-features = false }
syn = "1.0" # syn = { version = "1.0.107", default-features = false, features = ["full"] }
quote = "1.0"
prettyplease = "0.1.20"
darling = "0.14.4"
